--- a/application.html
+++ b/application.html
@@ -15,7 +15,7 @@
             <nav class="nav" style="background: var(--base-lighter);">
                 <div class="logo-container">
                     <a href="index.html" class="index-page">
-                        <img src="assets\logo.png" alt="Company Logo" id="real-logo">
+                        <img src="assets/logo-black.png" alt="Company Logo" id="real-logo">
                         <h2 class="logo-text" style="color: black;">Wholesalers United</h2>
                     </a>
                 </div>
