--- a/application.html
+++ b/application.html
@@ -12,7 +12,7 @@
     </head>
     <body style="background: var(--base-lighter);">
         <main class="applicationssd">
-            <nav class="nav-app" style="background: var(--base-lighter);">
+            <nav class="nav" style="background: var(--base-lighter);">
                 <div class="logo-container">
                     <a href="index.html" class="index-page">
                         <img src="assets/logo-black.png" alt="Company Logo" id="real-logo">
