--- a/ourStory.html
+++ b/ourStory.html
@@ -136,7 +136,7 @@
                         <h3 class="person-role">Chief Executive Officer (CEO)</h3>
                     </div>
                     <p class="person-details-description">
-                        John is a visionary leader with over 20 years of experience in the space industry. He has a strong track record of building successful companies and bringing innovative products to market. As the CEO of our space tourism company, John is responsible for setting the strategic direction of the company and ensuring that we deliver exceptional experiences to our customers.
+                        John is a dynamic leader with more than two decades of expertise in the wholesale industry. With a proven history of establishing thriving businesses and introducing pioneering solutions, he drives our wholesale company forward as CEO. John is tasked with charting the company's strategic course and guaranteeing unparalleled service to our clients.
                     </p>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                         <h3 class="person-role">Chief Technology Officer (CTO)</h3>
                     </div>
                     <p class="person-details-description">
-                        Tom is a seasoned technology executive with over 15 years of experience in the space industry. He leads our team of engineers and is responsible for developing the cutting-edge technology that powers our space tourism experiences. His expertise in rocketry and space travel ensures that our guests are safe and secure on their journey to the stars.
+                        Tom brings a wealth of technological prowess to our wholesale company, boasting more than 15 years of proficiency in the industry. As our CTO, he spearheads our team of tech experts, driving the development of state-of-the-art solutions that streamline our wholesale operations. With a deep understanding of logistics and distribution, Tom ensures the seamless flow of products and services to our clients, positioning our company as a leader in the wholesale sector.
                     </p>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                         <h3 class="person-role">Head of Customer Experience</h3>
                     </div>
                     <p class="person-details-description">
-                        Emily is a customer service expert with a passion for space travel. She leads our team of customer service representatives, ensuring that our guests have a seamless and enjoyable experience from start to finish. Her focus on customer satisfaction has helped us earn a reputation as one of the best space tourism companies in the industry.
+                        Emily is a dedicated advocate for customer satisfaction, with a keen interest in providing exceptional service in the wholesale industry. Leading our team of customer experience specialists, she orchestrates efforts to guarantee a smooth and delightful journey for our clients. Emily's commitment to understanding and meeting customer needs has solidified our position as a top-notch wholesaling company known for its outstanding service and support.
                     </p>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                         <h3 class="person-role">Head of Operations</h3>
                     </div>
                     <p class="person-details-description">
-                        David is an operations expert with over a decade of experience in the space industry. He oversees the logistics of our space tourism experiences, ensuring that everything runs smoothly and that our guests are safe and comfortable. His attention to detail and ability to solve problems quickly make him a valuable member of our team.
+                        David is an operations expert with over a decade of experience in the wholesaling industry. He oversees the logistics of our wholesaling experiences, ensuring that everything runs smoothly and that our customers are safe and comfortable. His attention to detail and ability to solve problems quickly make him a valuable member of our team.
                     </p>
                 </div>
             </div>
