--- a/ourStory.html
+++ b/ourStory.html
@@ -150,7 +150,7 @@
                         <h3 class="person-role">Chief Technology Officer (CTO)</h3>
                     </div>
                     <p class="person-details-description">
-                        Tom brings a wealth of technological prowess to our wholesale company, boasting more than 15 years of proficiency in the industry. As our CTO, he spearheads our team of tech experts, driving the development of state-of-the-art solutions that streamline our wholesale operations. With a deep understanding of logistics and distribution, Tom ensures the seamless flow of products and services to our clients, positioning our company as a leader in the wholesale sector.
+                        Tom brings a wealth of technological prowess to our wholesale company, boasting more than 15 years of proficiency in the industry. As our CTO, he spearheads our team of tech experts, driving the development of state-of-the-art solutions that streamline our wholesale operations.
                     </p>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                         <h3 class="person-role">Head of Customer Experience</h3>
                     </div>
                     <p class="person-details-description">
-                        Emily is a dedicated advocate for customer satisfaction, with a keen interest in providing exceptional service in the wholesale industry. Leading our team of customer experience specialists, she orchestrates efforts to guarantee a smooth and delightful journey for our clients. Emily's commitment to understanding and meeting customer needs has solidified our position as a top-notch wholesaling company known for its outstanding service and support.
+                        Emily is a dedicated advocate for customer satisfaction and is keen to provide exceptional service in the wholesale industry. Leading our team of customer experience specialists, she orchestrates efforts to guarantee our clients a smooth and delightful journey.
                     </p>
                 </div>
             </div>
