--- a/ourStory.html
+++ b/ourStory.html
@@ -150,7 +150,7 @@
                         <h3 class="person-role">Chief Technology Officer (CTO)</h3>
                     </div>
                     <p class="person-details-description">
-                        Tom brings a wealth of technological prowess to our wholesale company, boasting more than 15 years of proficiency in the industry. As our CTO, he spearheads our team of tech experts, driving the development of state-of-the-art solutions that streamline our wholesale operations.
+                        Tom brings a wealth of technological prowess to our wholesale company, boasting more than 15 years of proficiency in the industry. As our CTO, he spearheads our team of tech experts, driving the development of state-of-the-art solutions that streamline our wholesale operations. He is an integral part of the development of Wholesalers United.
                     </p>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                         <h3 class="person-role">Head of Customer Experience</h3>
                     </div>
                     <p class="person-details-description">
-                        Emily is a dedicated advocate for customer satisfaction and is keen to provide exceptional service in the wholesale industry. Leading our team of customer experience specialists, she orchestrates efforts to guarantee our clients a smooth and delightful journey.
+                        Emily is a dedicated advocate for customer satisfaction and is keen to provide exceptional service in the wholesale industry. Leading our team of customer experience specialists, she orchestrates efforts to guarantee our clients a smooth and delightful journey. She is an integral part of the advertisement, endorsement, and evolution of the company. 
                     </p>
                 </div>
             </div>
