--- a/application.html
+++ b/application.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo-black.png" type="image/x-icon">
     
     <!-- Title -->
     <title>Wholesalers United</title>
