--- a/benefits.html
+++ b/benefits.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="style.css" type="text/css">
         
         <!-- Shortcut icon -->
-        <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/logo-black.png" type="image/x-icon">
         
         <!-- Title of the webpage -->
         <title>Wholesalers United</title>
