--- a/joinus.html
+++ b/joinus.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/df8a439682.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css" type="text/css">
-        <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/logo-black.png" type="image/x-icon">
         <title>Wholsalers United</title>
     </head>
     <body>
